--- a/styles/global/style.scss
+++ b/styles/global/style.scss
@@ -1,2 +1,156 @@
 $primary: #2196f3;
+$secondary: #ffffff;
 $register-card: #21212114;
+
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
+
+@mixin slowTrans {
+    transition: all 0.3s ease;
+}
+
+html {
+    font-size: 12px;
+}
+
+* {
+    margin: 0;
+    font-weight: normal;
+    text-decoration: none;
+    scroll-behavior: smooth;
+    box-sizing: border-box;
+    font-family: Roboto;
+}
+
+button {
+    cursor: pointer;
+    border: 0;
+    background: none;
+    outline: none;
+}
+input {
+    border: 0;
+    outline: none;
+}
+body {
+    background: $secondary;
+}
+
+.header {
+    z-index: 5;
+    box-shadow: 0px 4px 4px #0000003d;
+    background: $primary;
+    height: 65px;
+    padding: 0 25px;
+    display: flex;
+    align-items: center;
+    &-logo {
+        width: 80px;
+        height: 40px;
+        display: grid;
+        grid-template-rows: repeat(2, 50%);
+        &__container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-shadow: 0px 4px 4px #00000040;
+            &:first-child {
+                color: $secondary;
+            }
+            &:last-child {
+                color: $primary;
+                background: $secondary;
+            }
+        }
+        &__text {
+            text-align: center;
+            letter-spacing: 1.25px;
+            text-transform: uppercase;
+            font-weight: 500;
+            font-size: 11px;
+        }
+    }
+
+    &-nav {
+        height: 100%;
+        display: flex;
+        margin-left: 150px;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        &__container {
+            padding: 10px 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            position: relative;
+            height: 100%;
+            row-gap: 10px;
+            width: 100px;
+            &-substrate {
+                position: absolute;
+                z-index: 0;
+                width: 100%;
+                height: 100%;
+                background: #2f80ed;
+            }
+            &-card {
+                z-index: 1;
+                width: 24px;
+                height: 24px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background: center no-repeat url(../../assets/icons/white-circle.svg);
+            }
+            &-text {
+                font-size: 12px;
+                z-index: 1;
+                text-align: center;
+                color: #fff;
+                letter-spacing: 0.4px;
+            }
+        }
+    }
+
+    &-container {
+        margin-left: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        column-gap: 20px;
+        flex-direction: row;
+        &__avatar {
+            border-radius: 50px;
+            height: 45px;
+            width: 45px;
+            display: none;
+        }
+        &__btn {
+            background: #f2f9fe;
+            font-weight: 500;
+            height: 35px;
+            font-size: 14px;
+            display: flex;
+            align-content: center;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            letter-spacing: 1.25px;
+            text-transform: uppercase;
+            color: $primary;
+            box-shadow: 0px 3px 5px #00000033, 0px 1px 18px #0000001f, 0px 6px 10px #00000024;
+            border-radius: 4px;
+        }
+        &__start-btn {
+            width: 130px;
+            display: none;
+            & span {
+                font-weight: 500;
+            }
+        }
+        &__register-btn {
+            width: 205px;
+        }
+    }
+}
