--- a/styles/modals/style.css
+++ b/styles/modals/style.css
@@ -1,1 +1,269 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
+html {
+  font-size: 12px;
+}
+
+* {
+  margin: 0;
+  font-weight: normal;
+  text-decoration: none;
+  scroll-behavior: smooth;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: Roboto;
+}
+
+button {
+  cursor: pointer;
+  border: 0;
+  background: none;
+  outline: none;
+}
+
+input {
+  border: 0;
+  outline: none;
+}
+
+.register {
+  width: 640px;
+  visibility: hidden;
+  position: fixed;
+  left: 50%;
+  z-index: 4;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  margin-top: 150%;
+  background: #ffffff;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (auto)[2];
+      grid-template-rows: repeat(2, auto);
+  -webkit-box-shadow: 0px 1px 5px #00000033, 0px 3px 4px #0000001f, 0px 2px 4px #00000024;
+          box-shadow: 0px 1px 5px #00000033, 0px 3px 4px #0000001f, 0px 2px 4px #00000024;
+  border-radius: 10px;
+  -webkit-transition: all 0.7s ease;
+  transition: all 0.7s ease;
+}
+
+.register-visible {
+  visibility: visible;
+  margin: 0;
+}
+
+.register-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 20px;
+  height: 67px;
+}
+
+.register-header__title {
+  font-weight: 500;
+  font-size: 20px;
+  letter-spacing: 0.15px;
+}
+
+.register-body {
+  background: #fafafa;
+  padding: 30px 20px 0;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto max-content;
+      grid-template-columns: auto -webkit-max-content;
+      grid-template-columns: auto max-content;
+  -webkit-column-gap: 38px;
+          column-gap: 38px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.register-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (auto)[3];
+      grid-template-rows: repeat(3, auto);
+  row-gap: 16px;
+}
+
+.register-card {
+  display: -ms-grid;
+  display: grid;
+  height: 56px;
+  -ms-grid-columns: (auto)[2];
+      grid-template-columns: repeat(2, auto);
+  -ms-grid-rows: (auto)[2];
+      grid-template-rows: repeat(2, auto);
+  border-radius: 4px 4px 0px 0px;
+  border-bottom: 1px solid #000000d7;
+  background: #21212114;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 10px 0 50px;
+}
+
+.register-card__title {
+  font-size: 12px;
+  margin-top: 8px;
+  font-weight: 500;
+  letter-spacing: 0.4px;
+  color: #00000061;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+}
+
+.register-card__input {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2 / 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  height: 30px;
+  background: none;
+  letter-spacing: 0.15px;
+  color: #000000de;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.register-card__icon {
+  margin-left: auto;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
+  display: none;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+}
+
+.register-card__icon-error {
+  display: none;
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+  background: #ff3d3d25;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.register-card__icon-error img {
+  width: 18px;
+  height: 18px;
+}
+
+.register-avatar__icon {
+  border-radius: 100px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  width: 198px;
+  height: 198px;
+  background: center no-repeat url(../../assets/icons/no-avatar.svg);
+}
+
+.register-avatar__icon:hover {
+  background: center no-repeat url(../../assets/icons/add-avatar.svg);
+}
+
+.register-avatar__user-img {
+  width: 198px;
+  height: 198px;
+  display: none;
+  border-radius: 100px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.register-avatar__user-img:hover {
+  opacity: 0.6;
+}
+
+.register-avatar__input {
+  display: none;
+}
+
+.register-footer {
+  padding: 100px 20px 26px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 17px;
+          column-gap: 17px;
+  border-radius: 0 0 10px 10px;
+  background: #fafafa;
+}
+
+.register-footer__btn {
+  -webkit-box-shadow: 0px 0px 2px #0000001f, 0px 2px 2px #0000003d;
+          box-shadow: 0px 0px 2px #0000001f, 0px 2px 2px #0000003d;
+  border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  letter-spacing: 1.25px;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 500;
+  width: 108px;
+  height: 36px;
+}
+
+.register-footer__btn:first-child {
+  background: #2196f3;
+  color: #ffffff;
+}
+
+.register-footer__btn:last-child {
+  background: #e3f2fd;
+  color: #2196f3;
+}
+
+#substrate {
+  position: fixed;
+  z-index: 3;
+  background: #00000040;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: all 0.7s ease;
+  transition: all 0.7s ease;
+}
+
+.substrate-visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.substrate-hidden {
+  visibility: hidden;
+  opacity: 0;
+}
+/*# sourceMappingURL=style.css.map */
