--- a/styles/global/style.scss
+++ b/styles/global/style.scss
@@ -192,10 +192,48 @@ body {
         gap: 20px;
         border-radius: 5px;
         &__container {
+            cursor: pointer;
             & img {
                 border-radius: 5px;
                 box-shadow: 2px 2px 6px #888888;
             }
         }
     }
+}
+
+#gameImage_1 {
+    display: none;
+}
+#gameImage_2 {
+    display: none;
+}
+#gameImage_3 {
+    display: none;
+}
+#gameImage_4 {
+    display: none;
+}
+#gameImage_5 {
+    display: none;
+}
+#gameImage_6 {
+    display: none;
+}
+#gameImage_7 {
+    display: none;
+}
+#gameImage_8 {
+    display: none;
+}
+#gameImage_9 {
+    display: none;
+}
+#gameImage_10 {
+    display: none;
+}
+#gameImage_11 {
+    display: none;
+}
+#gameImage_12 {
+    display: none;
 }
