--- a/styles/global/style.css
+++ b/styles/global/style.css
@@ -11,6 +11,7 @@ html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: Roboto;
+  -webkit-tap-highlight-color: transparent;
 }
 
 button {
@@ -284,9 +285,14 @@ body {
 
 .game-field__container {
   cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .game-field__container img {
+  -webkit-user-drag: none;
   border-radius: 5px;
   -webkit-box-shadow: 2px 2px 6px #888888;
           box-shadow: 2px 2px 6px #888888;
