--- a/styles/global/style.css
+++ b/styles/global/style.css
@@ -305,7 +305,9 @@ body {
   display: none;
   z-index: 2;
   width: 100%;
-  height: 100%;
+  height: 99%;
+  border-radius: 5px;
+  left: 0px;
   position: absolute;
 }
 
