--- a/styles/modals/style.css
+++ b/styles/modals/style.css
@@ -30,7 +30,7 @@ input {
   visibility: hidden;
   position: fixed;
   left: 50%;
-  z-index: 4;
+  z-index: 6;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -265,5 +265,70 @@ input {
 .substrate-hidden {
   visibility: hidden;
   opacity: 0;
+}
+
+.result {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 360px;
+  min-height: 130px;
+  padding: 20px 30px;
+  visibility: hidden;
+  position: fixed;
+  left: 50%;
+  background-color: #ffffff;
+  z-index: 6;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  margin-top: 150%;
+  -webkit-transition: all 0.7s ease;
+  transition: all 0.7s ease;
+}
+
+.result-visible {
+  visibility: visible;
+  margin: 0;
+}
+
+.result-text {
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.25px;
+  color: #00000099;
+  font-weight: 500;
+}
+
+.result-btn {
+  width: 100px;
+  height: 36px;
+  background: #2196f3;
+  -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.24);
+          box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.24);
+  border-radius: 4px;
+  text-align: center;
+  letter-spacing: 1.25px;
+  text-transform: uppercase;
+  color: #ffffff;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.result-btn:hover {
+  background-color: #ffffff;
+  border: 1px solid #2196f3;
+  color: #2196f3;
 }
 /*# sourceMappingURL=style.css.map */
