--- a/styles/global/style.css
+++ b/styles/global/style.css
@@ -281,6 +281,13 @@ body {
       grid-template-rows: repeat(3, auto);
   gap: 20px;
   border-radius: 5px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.game-field__shuffle {
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
 }
 
 .game-field__container {
@@ -335,7 +342,7 @@ body {
 }
 
 #gameFieldSubstrate {
-  display: none;
+  display: unset;
   position: fixed;
   width: 100%;
   height: 100%;
