--- a/styles/modals/style.css
+++ b/styles/modals/style.css
@@ -30,7 +30,7 @@ input {
   visibility: hidden;
   position: fixed;
   left: 50%;
-  z-index: 6;
+  z-index: 11;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -258,24 +258,21 @@ input {
   color: #2196f3;
 }
 
-#substrate {
+.substrate {
   position: fixed;
-  z-index: 3;
+  z-index: 10;
   background: #00000040;
   width: 100%;
   height: 100%;
   -webkit-transition: all 0.7s ease;
   transition: all 0.7s ease;
+  visibility: hidden;
+  opacity: 0;
 }
 
 .substrate-visible {
   visibility: visible;
   opacity: 1;
-}
-
-.substrate-hidden {
-  visibility: hidden;
-  opacity: 0;
 }
 
 .result {
@@ -299,7 +296,7 @@ input {
   position: fixed;
   left: 50%;
   background-color: #ffffff;
-  z-index: 6;
+  z-index: 11;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
