--- a/styles/global/style.scss
+++ b/styles/global/style.scss
@@ -37,6 +37,42 @@ body {
     background: $secondary;
 }
 
+.preloader {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
+    background: $primary;
+    z-index: 1001;
+    &__image {
+        position: relative;
+        top: 50%;
+        left: 50%;
+        width: 70px;
+        height: 70px;
+        margin-top: -35px;
+        margin-left: -35px;
+        text-align: center;
+        animation: preloader-rotate 2s infinite linear;
+    }
+}
+
+@keyframes preloader-rotate {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.loaded .preloader {
+    display: none;
+    &_hiding .preloader {
+        transition: 0.3s opacity;
+        opacity: 0;
+    }
+}
+
 .header {
     z-index: 5;
     box-shadow: 0px 4px 4px #0000003d;
@@ -147,9 +183,9 @@ body {
             color: $primary;
             box-shadow: 0px 3px 5px #00000033, 0px 1px 18px #0000001f, 0px 6px 10px #00000024;
             border-radius: 4px;
+            min-width: 130px;
         }
         &__start-btn {
-            width: 130px;
             display: none;
             & span {
                 font-weight: 500;
@@ -347,4 +383,45 @@ body {
     row-gap: 15px;
     grid-template-columns: repeat(2, 50%);
     grid-template-rows: repeat(4, auto);
+}
+
+#openGamePage {
+    display: none;
+}
+
+.settings {
+    margin: 35px 0 125px;
+    background: $secondary;
+    border-radius: 5px;
+    width: 70%;
+    display: grid;
+    padding: 35px 45px;
+    row-gap: 35px;
+    box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.24), 0px 9px 18px rgba(0, 0, 0, 0.18);
+    &-container {
+        height: 70px;
+        border-bottom: 1px solid #e5e5e5;
+        max-width: max-content;
+        &__title {
+            font-weight: 500;
+            font-size: 1.8rem;
+            letter-spacing: 0.15px;
+            color: rgba(0, 0, 0, 0.87);
+        }
+        &__text {
+            letter-spacing: 0.25px;
+            color: #00000099;
+            font-weight: 500;
+        }
+        &__select {
+            border: none;
+            color: #312f2f;
+            font-weight: 700;
+            outline: none;
+            &:hover {
+                border-bottom: 2px solid #312f2f;
+                cursor: pointer;
+            }
+        }
+    }
 }
