--- a/styles/global/style.scss
+++ b/styles/global/style.scss
@@ -208,9 +208,9 @@ body {
     background: #0000000d;
     border-radius: 5px;
     width: 70%;
-    height: 800px;
     display: flex;
     flex-direction: column;
+    padding-bottom: 100px;
     align-items: center;
     &-time {
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.24);
@@ -278,7 +278,11 @@ body {
 #gameImage_9,
 #gameImage_10,
 #gameImage_11,
-#gameImage_12 {
+#gameImage_12,
+#gameImage_13,
+#gameImage_14,
+#gameImage_15,
+#gameImage_16 {
     display: none;
 }
 
@@ -413,14 +417,19 @@ body {
             color: #00000099;
             font-weight: 500;
         }
-        &__select {
-            border: none;
+        &__btn {
+            border: 1px solid #312f2f;
             color: #312f2f;
-            font-weight: 700;
+            font-weight: 500;
             outline: none;
+            width: max-content;
+            background: $secondary;
+            height: 20px;
+            @include slowTrans();
             &:hover {
-                border-bottom: 2px solid #312f2f;
                 cursor: pointer;
+                background: $primary;
+                color: $secondary;
             }
         }
     }
