--- a/styles/modals/style.scss
+++ b/styles/modals/style.scss
@@ -277,3 +277,61 @@ input {
         }
     }
 }
+
+.relink {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 600px;
+    min-height: 130px;
+    padding: 20px 30px;
+    visibility: hidden;
+    position: fixed;
+    left: 50%;
+    background-color: $secondary;
+    z-index: 11;
+    top: 30%;
+    transform: translate(-50%, -50%);
+    margin-bottom: 150%;
+    @include modalsTrans();
+    &-visible {
+        visibility: visible;
+        margin: 0;
+    }
+    &-text {
+        font-family: Roboto;
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: 0.25px;
+        color: #00000099;
+        font-weight: 500;
+    }
+    &-container {
+        display: flex;
+        flex-direction: row;
+        column-gap: 20px;
+    }
+    &-btn {
+        box-shadow: 0px 0px 2px #0000001f, 0px 2px 2px #0000003d;
+        border-radius: 5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        letter-spacing: 1.25px;
+        text-transform: uppercase;
+        font-size: 14px;
+        font-weight: 500;
+        width: 108px;
+        height: 36px;
+        &:first-child {
+            background: #e3f2fd;
+            color: $primary;
+        }
+        &:last-child {
+            background: $primary;
+            color: $secondary;
+        }
+    }
+}
