--- a/styles/global/style.css
+++ b/styles/global/style.css
@@ -405,7 +405,7 @@ body {
 
 #gameFieldSubstrate {
   display: unset;
-  position: fixed;
+  position: absolute;
   width: 100%;
   height: 100%;
   z-index: 5;
@@ -570,15 +570,19 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
   width: 100%;
   border-bottom: #21212114 1px solid;
   -webkit-column-gap: 15px;
           column-gap: 15px;
   position: relative;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 7px 0;
+}
+
+.score-card__user {
+  display: none;
 }
 
 .score-card__time {
