--- a/styles/global/style.scss
+++ b/styles/global/style.scss
@@ -288,7 +288,7 @@ body {
 
 #gameFieldSubstrate {
     display: unset;
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100%;
     z-index: 5;
@@ -399,12 +399,15 @@ body {
     }
     &-card {
         display: flex;
-        align-items: flex-end;
         width: 100%;
         border-bottom: #21212114 1px solid;
         column-gap: 15px;
         position: relative;
+        align-items: center;
         padding: 7px 0;
+        &__user {
+            display: none;
+        }
         &__time {
             position: absolute;
             top: 50%;
